Fix word-wrap of raw data.

--- a/styles/pass-list.scss
+++ b/styles/pass-list.scss
@@ -73,4 +73,6 @@ p.code {
 
 	padding: 10px;
 	border-radius: 5px;
+
+	word-wrap: break-word;
 }
